# codesys

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  conanfile.txt
src/: Plugin.cpp
src/component/: CodesysAdapter.cpp  CodesysAdapter.h
src/factory/: CodesysFactory.cpp  CodesysFactory.h
test/: .cproject  .project  CMakeLists.txt
test/dummy/copa/: ComponentController.cpp  FactoryController.cpp
test/dummy/osal/: Semaphore.h  SemaphoreFactory.cpp
test/src/factory/: CodesysFactoryTest.cpp
